@@ -25,9 +25,8 @@ has 'encoder'      => is => 'lazy', isa => Object, builder => sub {
    return $template;
 };
 
-has 'templates'    => is => 'lazy', isa => Directory,
-   builder         => sub { $_[ 0 ]->config->root->catdir( 'templates' ) },
-   coerce          => Directory->coercion;
+has 'templates'    => is => 'lazy', isa => Directory, coerce => TRUE,
+   builder         => sub { $_[ 0 ]->config->root->catdir( 'templates' ) };
 
 # Public methods
 sub render_template {
